@@ -7,6 +7,8 @@ CHANGES
 
 - Fix save() not issuing a correct ``UPDATE`` statement
 
+- Fix types of data after fetching from model
+
 
 0.0.0 (2012-07-10)
 ------------------
